Recent cont completed

--- a/style.css
+++ b/style.css
@@ -5,6 +5,19 @@
     position: relative;
     outline: none !important;
  }
+
+ p {
+  margin-bottom: 0;
+ }
+
+ h4 {
+  margin-bottom: 0;
+ }
+
+ svg {
+  width: 25px;
+  height: 25px;
+ }
  
  :root{
   --sky-blue: #2DAAE1;
@@ -12,6 +25,8 @@
   --deep-blue: #1070B7;
   --deep-blue-2: #0f5286;
   --pink-red: #aa2c63;
+  --pink: #da2573;
+  --container-white: #f5fafc;
  }
  
  /* Body Styles */ 
@@ -19,9 +34,9 @@
     font-family: 'Poppins'; 
     margin: 0; 
     padding: 0; 
-    color: #333;
     width: 100vw;
     height: 100vh; 
+    background: var(--container-white);
   } 
   #topbar{ 
     background-color: #155894; 
@@ -91,7 +106,9 @@
 
   .profile a img {
     height: 7vh;
+    width: 7vh;
     min-height: 60px;
+    object-fit: cover;
   }
 
 
@@ -190,6 +207,115 @@
     background: var(--pink-red);   
     transition: .2s ease-in-out;
   }
+
+
+
+
+
+
+
+
+/* RECENT POST */
+.recent_cont {
+  padding: 40px 30px;
+}
+
+.recent_cont > main > ul {
+  display: flex;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+
+.recent_cont > header {
+  margin-bottom: 30px;
+}
+
+.recent_cont > header h2 {
+  font-size: 1.8rem;
+}
+.recently-viewed-post {
+  width: 350px;
+  border-radius: 12px;
+  box-shadow: 0 4px 7px #fff;
+  overflow: hidden;
+}
+
+.recently-viewed-post header {
+  height: 300px;
+  background: url(note_cover.jpg);
+  background-size: cover;
+  cursor: pointer;
+} 
+
+.recently-viewed-post header .subject {
+  border-radius: 8px;
+  padding: 4px 12px;
+  height: min-content;
+  display: inline-block;
+  background: var(--deep-blue);
+  color: #fff;
+  text-transform: uppercase;
+  cursor: default;
+}
+
+
+.recently-viewed-post footer {
+  background: var(--light-sky-blue);
+}
+.recently-viewed-post footer > .top {
+  padding: 8px 12px;
+  font-size: 1.2rem;
+  background: white;
+}
+
+.recently-viewed-post footer > .bottom {
+  display: flex;
+  padding: 15px;
+  align-items: center;
+}
+
+.recently-viewed-post footer > .bottom > .left {
+  display: flex;
+  width: 80%;
+}
+
+.recently-viewed-post footer > .bottom .left img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.recently-viewed-post footer > .bottom > .left > .right {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.recently-viewed-post footer > .bottom > .left > .right h4 {
+  font-size: 1.1rem;
+}
+
+.recently-viewed-post footer > .bottom > .left > .right p {
+  font-size: 0.7rem;
+}
+
+
+.recently-viewed-post footer > .bottom > .right  {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  color: var(--pink);
+}
+
+.recently-viewed-post footer > .bottom > .right svg {
+  width: 25px;
+  height: 25px;
+  fill: var(--pink);
+}
+
+
+
    
   /* Header Styles */ 
   /* header { 
