--- a/style.css
+++ b/style.css
@@ -225,6 +225,12 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.recent_cont> main > ul>li{
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
+    transition: all 0.3s ease-out;
+}
+
 .recent_cont> main > ul>li:hover {
     box-shadow: 0px 5px 25px rgba(0,0,0,0.3); 
     transform: translateY(-10px); 
@@ -333,67 +339,6 @@
     color: white; 
   }  */
    
-  /* Card Styles */ 
-  /* Styles for small screens */ 
-  .card { 
-   display: flex; 
-   border-radius: 20px; 
-   overflow: hidden; 
-   width: 15rem; 
-   height: 7.5rem; 
-   margin: 0 auto; 
-   background-color: white; 
-   box-shadow: 0px 0px 15px rgba(0,0,0,0.2); 
-   transition: all 0.3s ease-out; 
- }
-  
-   
-  .card:hover { 
-    box-shadow: 0px 5px 25px rgba(0,0,0,0.3); 
-    transform: translateY(-10px); 
-  } 
-   
-  .card img { 
-    width: 100%; 
-    height: 100%; 
-    object-fit: cover; 
-  } 
-   
-  .card-body { 
-    display: flex; 
-    flex-direction: row; 
-    justify-content: space-between; 
-    align-items: center; 
-    padding: 15px; 
-    width: 50%; 
-  } 
-   
-  .card-title { 
-    margin: 0; 
-    font-size: 24px; 
-  } 
-   
-  .card-text { 
-    margin: 10px 0; 
-    font-size: 16px; 
-  } 
-   
-   
-  /* Styles for larger screens */ 
-  @media (min-width: 768px) { 
-    .card { 
-      width: 20rem; 
-    } 
-     
-    .card-title { 
-      font-size: 28px; 
-    } 
-     
-    .card-text { 
-      font-size: 18px; 
-    } 
- }
- 
  
  /*news & updates section*/
  
@@ -401,6 +346,7 @@
    margin-bottom: 1rem;
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    border: none;
+   border-radius: 20px;
  }
  
  #card2 {
@@ -426,6 +372,7 @@
    #card2 {
      
      height: auto;
+     width: 97%;
    }
  }
  /* Card title styles */
@@ -446,41 +393,42 @@
  
  /* Card footer styles */
  .card-footer2 {
-   background-color: #f8f9fa;
    padding: .75rem 1.25rem;
    border-top: 1px solid rgba(0, 0, 0, 0.125);
    text-align: right;
    font-size: 0.875rem;
    color: #666;
  }
-   
+ 
   .btn { 
-    display: inline-block; 
     padding: 10px 15px; 
-    border-radius: 5px; 
+    border-radius: 5px;
+    color: var(--sky-blue); 
     text-decoration: none; 
     transition: all 0.3s ease-out; 
   } 
    
   .btn:hover { 
-    background-color: #285c24; 
+    background-color: var(--deep-blue);
+    color: white;
   } 
    
   .back-to-top { 
     position: fixed; 
-    bottom: 20px; 
-    right: 20px; 
-    display: none; 
-    z-index: 9999; 
+    bottom: 2px; 
+    right: 2px;
+    z-index: 9999;
+    background-color: transparent;
+    border-color: transparent;
   } 
   .back-to-top:hover { 
-        background-color: #64eda6; 
+        background-color: #7db7e4;
   } 
    
    
   /* Footer Styles */ 
   .footer { 
-    background-color: #285c24; 
+    background-color: var(--sky-blue); 
     padding: 20px; 
     color: white; 
     text-align: center; 
@@ -552,4 +500,6 @@
       margin: 0; 
     } 
   } 
- 
+ .text-center{
+  background-color: #60a6dd;
+ }
