--- a/style.css
+++ b/style.css
@@ -114,6 +114,9 @@
     color: #fff !important;
     transition: .2s ease-in-out;
   }
+  .nav-item-profile:hover{
+    background:transparent;
+  }
 
   .nav-item a {
     font-size: 1.3rem;
@@ -325,6 +328,17 @@
   fill: var(--deep-blue-2); */
   fill: #fff;
 }
+
+.top h4:hover,
+.top p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.right h4:hover,
+.right p:hover{
+    cursor: pointer;  
+}
+
 
 
 
@@ -749,63 +763,6 @@
    
    /*news & updates section*/
    
-   #card2 {
-     margin-bottom: 1rem;
-     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-     border: none;
-     border-radius: 20px;
-   }
-   
-   #card2 {
-     height: 100%;
-   }
-   
-   #card2 .card-title {
-     font-size: 1.5rem;
-   }
-   
-   #card2 p {
-     font-size: 1.2rem;
-   }
-   
-   #card2 .card-footer2 {
-     background-color: #f8f9fa;
-     border-top: none;
-     padding-top: 1rem;
-     padding-bottom: 1rem;
-   }
-   
-   @media (min-width: 768px) {
-     #card2 {
-       
-       height: auto;
-       width: 97%;
-     }
-   }
-   /* Card title styles */
-   .card-title {
-     font-size: 1.5rem;
-     font-weight: bold;
-   }
-   
-   /* Card body styles */
-   .card-body {
-     padding: 1rem;
-   }
-   
-   .card-text {
-     font-size: 1rem;
-     color: #666;
-   }
-   
-   /* Card footer styles */
-   .card-footer2 {
-     padding: .75rem 1.25rem;
-     border-top: 1px solid rgba(0, 0, 0, 0.125);
-     text-align: right;
-     font-size: 0.875rem;
-     color: #666;
-   }
    
     .btn { 
       padding: 10px 15px; 
