--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@
   padding: 0;
  }
 
+ img {
+  width: 100%;
+  height: 100%;
+ }
+
  .container-fluid {
   margin: 0;
  }
@@ -41,6 +46,7 @@
   --pink: #da2573;
   --container-white: #f5fafc;
   --container-white-low: rgba(245, 250, 252, 0.808);
+  --light-black: rgb(36, 36, 36);
  }
  
  /* Body Styles */ 
@@ -201,7 +207,136 @@
   }
 
 
+  .search-result_bar {
+    display: none;
+    width: 20vw;
+    height: 40vh;
+    overflow: auto;
+    z-index: 2;
+    position: absolute;
+    background: #fff;
+  }
 
+  .search-result_item {
+    width: 100%;
+    display: flex;
+    display: flex;
+    flex-direction: row;
+    align-items: space;    
+    background: #fff;
+    /* background: var(--container-white); */
+    margin-bottom: 5px;
+    cursor: pointer;
+  }
+
+
+  .search-result_item:hover {
+    background: var(--container-white);
+    transition: .2s ease;
+  }
+
+  .search-result_item > .left {
+    width: 80px !important;
+    height: 80px;
+    padding: 5px;
+  }
+
+  .search-result_item .left img {
+    border-radius: 12px;
+    background-position: center;
+    object-fit: cover;
+  }
+
+
+  .search-result_item > .right {
+    padding: 10px 0 0 10px;
+    width: calc(100% - 80px);
+  }
+
+  .search-result_item .right .top h4 {
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    color: var(--deep-blue-2);
+  }
+
+  .search-result_item > .right > .bottom {
+    display: flex;
+    width: 80%;
+  }
+
+  .search-result_item .right .bottom .left {
+    display: flex;
+    align-items: center;
+    width: 100% !important;
+  }
+
+  .search-result_item .right .bottom .left p {
+    float: right;
+    font-size: 0.8rem;
+    color: var(--deep-blue-2);
+  }
+
+  .progress-bar {
+    width: 100%;
+    background: var(--container-white);
+    margin-right: 10px;
+  }
+
+  .progress-bar .bar {
+    width: 40%;
+    height: 5px;
+    background: yellow;
+  }
+
+
+  .search-result_item .right .more-bottom {
+    display: flex;
+    width: 30%;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+  }
+
+  .search-result_item .right .more-bottom div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .search-result_item .right .more-bottom div p {
+    font-size: 0.65rem;
+    color: grey;
+    display: block;
+    height: min-content;
+    top: 2px;
+  }
+
+  .search-result_item .right .more-bottom div:nth-child(2) svg {
+    width: 14px;
+    height: 14px;
+    top: 1px;
+  }
+
+
+  .search-result_item .right .more-bottom svg {
+    width: 13px;
+    height: 13px;
+    margin-right: 2px;
+    fill: var(--light-black);
+  }
+
+
+  .search-result-item__chapter .right .top h4 {
+    color: black
+  }
+
+  .search-result-item__chapter .right .top h4:hover {
+    text-decoration: none !important;
+  }
+
+  
 
 
   .bottom-nav {
@@ -215,21 +350,104 @@
     border-radius: 0 0 0 12px;
   }
 
-  .bottom-nav ul {
+  .bottom-nav > ul {
     display: flex;
     gap: 20px;
     list-style: none;
-    flex-direction: row-reverse;
+    flex-direction: row;
   }
 
-  .bottom-nav ul li {
+  .bottom-nav > ul li {
     cursor: pointer;
   }
 
-  .bottom-nav ul li:hover svg {
+  .bottom-nav > ul li:hover svg {
     fill: var(--deep-blue-2);
     transition: .3s ease;
   }
+
+
+  .notification_bar {
+    display: none;
+    width: 25vw;
+    height: 60vh;
+    position: absolute;
+    right: 0;
+    background: #fff;
+    border-radius: 12px;
+    overflow: auto;
+    margin-top: 8px;
+  }
+
+  .notification_bar ul {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .notification {
+    display: flex;
+    align-items: center;
+    /* margin-bottom: 5px; */
+    background: var(--light-sky-blue);
+    cursor: pointer;
+  }
+
+  .notification:hover {
+    background: var(--container-white) !important;
+    transition: .2s ease;
+  }
+
+  .notification .left img {
+    padding: 5px;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .notification > .right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .notification .right .left {
+    width: 90%;
+    padding: 10px;
+  }
+
+  .notification .right .left h6 {
+    margin-bottom: 5px;
+  }
+
+  .notification .right .left p {
+    font-size: 0.7rem;
+    color: grey;
+    margin-top: 0;
+  }
+
+  .blue_span {
+    color: var(--deep-blue-2);
+  }
+
+  .notification > .right > .right {
+    width: 10%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .notification .right .right .blue-circle {
+    width: 12.5px;
+    height: 12.5px;
+    border-radius: 50%;
+    background: var(--deep-blue);
+  }
+
+
+
 
 
   .home-image-cont {
@@ -421,13 +639,13 @@
   fill: #fff;
 }
 
-.top h4:hover,
-.top p:hover {
+.upload .top h4:hover,
+.upload .top p:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-.right h4:hover,
-.right p:hover{
+.upload .right h4:hover,
+.upload .right p:hover{
     cursor: pointer;  
 }
 
