--- a/profile.css
+++ b/profile.css
@@ -25,7 +25,10 @@
     }    
 
 .profile-header {
-  margin-top: 30px;
+  margin-top: 10px;
+  padding-top: 10px;
+  background-color: #c5d7eb;
+  ;
 }
 .profile-header p {
   font-size: 40px;
@@ -55,7 +58,7 @@
 
 /* Uploads styles */
 .uploads-list {
-  padding: 20px;
+  padding: 0px;
   
 }
 
